--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="tanushree">Tanushree</string>
     <string name="humidity">Humidity</string>
     <string name="something_went_wrong">Something went wrong</string>
+    <string name="enter_city">Enter City</string>
+    <string name="enter_city1">Enter City</string>
+    <string name="submit">Submit</string>
+    <string name="enter_city2">Enter City</string>
 </resources>
